--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="statusBar" class="items-center">
-        <p id="statTime">9:11 a.m.</p>
+        <p id="statTime">00:00 x.x.</p>
         <div id="notiIcons" class="flex justify-start"></div>
         <div id="statIcons" class="flex justify-end"></div>
     </div>
