--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="statIcons" class="flex justify-end"></div>
     </div>
     <div id="desktop"></div>
-    <div id="navigationBar">Navigation Bar</div>
+    <div id="navigationBar">Navigation Bar improvisada</div>
     
     <script src="utils.js"></script>
     <script src="systemConfig.js"></script>
@@ -26,7 +26,9 @@
     <script src="permissionManager.js"></script>
     <script src="variables.js"></script>
     <script src="functions.js"></script>
+    <script src="activityManager.js"></script>
     <script src="calvik.js"></script>
+    <script src="calvikScript.js"></script>
     <script src="appManager.js"></script>
     <script src="main.js"></script>
 </body>
