Agregar más features

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- primer línea antes de todo el cáos -->
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -15,11 +15,13 @@
         <div id="statIcons" class="flex justify-end"></div>
     </div>
     <div id="desktop"></div>
-    <div id="navigationBar">Navigation Bar improvisada</div>
+    <div id="navigationBar" class="flex justify-around items-center"></div>
     
+    <!-- El verdadero confía en el proceso -->
     <script src="utils.js"></script>
     <script src="systemConfig.js"></script>
     <script src="statusBarManager.js"></script>
+    <script src="navigationBarManager.js"></script>
     <script src="notificationManager.js"></script>
     <script src="alertDialog.js"></script>
     <script src="toastManager.js"></script>
