cambiar cosas de FS para proximas updates

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <!-- El verdadero confía en el proceso -->
     <script src="utils.js"></script>
+    <script src="fs.js"></script>
     <script src="systemConfig.js"></script>
     <script src="statusBarManager.js"></script>
     <script src="navigationBarManager.js"></script>
@@ -33,6 +34,7 @@
     <script src="calvik.js"></script>
     <script src="calvikScript.js"></script>
     <script src="appManager.js"></script>
+    <script src="priv-app.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
