Añadir features al FS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="alertDialog.js"></script>
     <script src="toastManager.js"></script>
     <script src="permissionManager.js"></script>
-    <script src="localStorage.js"></script>
+    <script src="sharedPreferences.js"></script>
     <script src="variables.js"></script>
     <script src="functions.js"></script>
     <script src="activityManager.js"></script>
