Añadir "/system/framework/framework-res.npk" (Tremendo avance)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="notificationManager.js"></script>
     <script src="alertDialog.js"></script>
     <script src="toastManager.js"></script>
+    <script src="resourceManager.js"></script>
     <script src="permissionManager.js"></script>
     <script src="sharedPreferences.js"></script>
     <script src="variables.js"></script>
